rozbudowa szablonu