@@ -9,12 +9,12 @@ import java.util.List;
 @Getter
 public enum RoleEnum {
 
-    ADMIN(Arrays.asList(PrivilageEnum.TEST_PRIVILAGE, PrivilageEnum.TEST_PRIVILAGE_1)),
-    ORGANIZER(Arrays.asList(PrivilageEnum.TEST_PRIVILAGE, PrivilageEnum.TEST_PRIVILAGE_1));
+    ADMIN_ORGANIZER(List.of(PrivilageEnum.MANAGE_ORGANIZATION_EVENTS, PrivilageEnum.MANAGE_APPLICATIONS_FOR_ORGANIZATION_EVENTS)),
+    ADMIN_EXHIBITOR(List.of(PrivilageEnum.SEARCH_EVENTS, PrivilageEnum.POSSIBILITY_TO_PARTICIPATE_IN_EVENTS));
 
     RoleEnum(List<PrivilageEnum> privilages) {
         this.privilages = privilages;
     }
 
-    private List<PrivilageEnum> privilages;
+    private final List<PrivilageEnum> privilages;
 }
